<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.TextConvertActivity">

    <TextView
        android:id="@+id/txtHelloWorld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/str_hello_world"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        />

    <LinearLayout
        android:id="@+id/layoutOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtHelloWorld"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="2"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/txtFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_file_selected"
                android:layout_marginEnd="8dp"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btnUploadFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_file"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btnHindi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_to_hindi"
            android:layout_marginTop="16dp"
            />

        <Button
            android:id="@+id/btnSpainish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_to_sp"
            />

        <Button
            android:id="@+id/btnRussian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_to_rus"
            />

        <Button
            android:id="@+id/btnTelugu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_to_telugu"
            />

        <Button
            android:id="@+id/btnIrish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_to_isis"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>